- Number of projects - CRUD methods() - Layout - Responisivity